...

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="Profiles"
        android:typeface="serif"
        android:textSize="36dp"
        android:textAlignment="center"
        android:id="@+id/textViewProfiles"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
...

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="+"
        android:id="@+id/buttonAddProfile"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:textSize="36dp"

        />

    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewProfiles"
        android:background="@color/background"
        android:divider="@color/background"
        android:layout_below="@id/textViewProfiles">

    </ListView>

...
